# Differential-wheeled-robot-MPC-tracking

./: .gitignore  README.md  cubic_spline_planner.py  mpc.py  pyproject.toml  requirements.txt
assets/: README.md
src/: cubic_spline_planner.py  demo_tracking.py  mpc.py  mpc_controller.py  visualization.py
